adding s for images

--- a/02_Bayes_Rule.Rmd
+++ b/02_Bayes_Rule.Rmd
@@ -96,7 +96,7 @@ knitr::kable(joint_p)
 
 We can also summarize it like that : 
 
-![](image/proba-1.vsg)
+![](images/proba-1.vsg)
 
 
 ### Posterior probability via Bayes' Rule!
