--- a/15_Hierarchical_Models_are_Exciting.Rmd
+++ b/15_Hierarchical_Models_are_Exciting.Rmd
@@ -1,13 +1,37 @@
 # Hierarchical Models are Exciting
 
-**Learning objectives:**
 
-- THESE ARE NICE TO HAVE BUT NOT ABSOLUTELY NECESSARY
 
-## SLIDE 1
+**Welcome to Unit 4 - The final *unit* !**
 
-- ADD SLIDES AS SECTIONS (`##`).
-- TRY TO KEEP THEM RELATIVELY SLIDE-LIKE; THESE ARE NOTES, NOT THE BOOK ITSELF.
+Hierarchical models for hierarchical (grouped) data
+
+- Chapter 15: Introduce the concepts
+
+- Chapter 16: Hierarchical models without predictors
+
+- Chapter 17: Normal Hierarchical Models with predictors
+
+- Chapter 18: Non-Normal Hierarchical Regression
+
+- Chapter 19: More Layers!
+
+
+**Chapter 15 - Learning objectives:**
+
+- Explore the limitations of our current Bayesian modeling toolbox under two extremes, complete pooling and no pooling.
+
+- Examine the benefits of the partial pooling provided by hierarchical Bayesian models.
+
+- Focus on the big ideas and leave the details to subsequent chapters.
+
+## Pooled / Grouped data
+
+
+
+## Complete Pooling
+
+
 
 ## Meeting Videos
 
