--- a/18_Non_Normal_Hierarchical.Rmd
+++ b/18_Non_Normal_Hierarchical.Rmd
@@ -39,7 +39,9 @@ library(tidybayes)
 library(broom.mixed)
 library(janitor)
 
-load("data/ch18/ch18.RData")
+climbers <- climbers_sub %>% 
+  select(expedition_id, member_id, success, year, season,
+         age, expedition_role, oxygen_used)
 ```
 
 
@@ -213,11 +215,23 @@ climb_model <- stan_glmer(
   chains = 4, iter = 5000*2, seed = 84735
 )
 ```
+```{r 18-climb_model_save, eval = FALSE, include = FALSE}
+# Run this manually if you change the model.
+saveRDS(climb_model, "data/ch18/climb_model.rds", compress = "xz")
+saveRDS(prior_summary(climb_model), "data/ch18/climb_models_prior_summary.rds")
+```
+
+```{r 18-load_climb_model, include = FALSE}
+climb_model <- readRDS("data/ch18/climb_model.rds")
+```
 
 **Confirm prior specifications**
 
-```{r comment=""}
+```{r 18-prior_summmary_climb_model, eval = FALSE}
 prior_summary(climb_model)
+```
+```{r 18-prior_summary_climb_model_eval, include = FALSE}
+readRDS("data/ch18/climb_models_prior_summary.rds")
 ```
 
 
@@ -232,29 +246,58 @@ rhat(climb_model)
 
 
 **Define success rate function**
-```{r}
+```{r 18-succes_rate}
 success_rate <- function(x){mean(x == 1)}
 ```
 
 
 **Posterior predictive check**
-```{r fig.cap="The histogram displays the proportion of climbers that were successful in each of 100 posterior simulated datasets",message=FALSE, warning=FALSE, paged.print=FALSE,cache=TRUE}
+```{r eval = FALSE}
 pp_check(climb_model, nreps = 100,
          plotfun = "stat", stat = "success_rate") + 
   xlab("success rate")
 ```
+```{r 18-save_pp_check, include = FALSE, eval = FALSE}
+# Save manually if you change this.
+climb_model_pp_check <- pp_check(
+  climb_model, nreps = 100, plotfun = "stat", stat = "success_rate"
+) + 
+  xlab("success rate")
 
+ggsave(
+  filename = "18_climb_model_pp_check.png", 
+  plot = climb_model_pp_check,
+  device = "png",
+  path = "images",
+  width = 6,
+  height = 4,
+  units = "in"
+)
+```
+```{r 18-pp_check_fig, echo=FALSE, fig.cap="The histogram displays the proportion of climbers that were successful in each of 100 posterior simulated datasets", fig.align='center'}
+knitr::include_graphics("images/18_climb_model_pp_check.png")
+```
 
 ### Posterior analysis
 
 
 **Posterior summaries for our global regression parameters** reveal that the likelihood of success decreases with age.
 
-```{r comment=""}
+```{r 18-tidy_climb_model, eval = FALSE}
 tidy(climb_model, 
      effects = "fixed",
      conf.int = TRUE, 
      conf.level = 0.80)
+```
+```{r 18-tidy_climb_model_save, include = FALSE, eval = FALSE}
+tidy_climb_model <- tidy(climb_model, 
+     effects = "fixed",
+     conf.int = TRUE, 
+     conf.level = 0.80)
+saveRDS(tidy_climb_model, "data/ch18/tidy_climb_model.rds")
+```
+```{r 18-tidy_climb_model_load, include = FALSE}
+readRDS("data/ch18/tidy_climb_model.rds")
 ```
 
 **Confidence intervals** are expressed as the log(odds) to the odds scale, so will be converted to:
@@ -282,7 +325,7 @@ climbers %>%
 ### Posterior classification
 
 **New expedition**
-```{r comment=""}
+```{r}
 new_expedition <- data.frame(
   age = c(20, 20, 60, 60), oxygen_used = c(FALSE, TRUE, FALSE, TRUE), 
   expedition_id = rep("new", 4))
@@ -292,10 +335,19 @@ new_expedition
 
 
 **Posterior predictions of binary outcome**
-```{r comment=""}
+```{r 18-predict, eval = FALSE}
 set.seed(84735)
 binary_prediction <- posterior_predict(climb_model, newdata = new_expedition)
-
+```
+```{r 18-predict-save, eval = FALSE, include = FALSE}
+set.seed(84735)
+binary_prediction <- posterior_predict(climb_model, newdata = new_expedition)
+saveRDS(binary_prediction, "data/ch18/binary_prediction.rds")
+```
+```{r 18-predict-load, include = FALSE}
+binary_prediction <- readRDS("data/ch18/binary_prediction.rds")
+```
+```{r 18-predict-head}
 # First 3 prediction sets
 head(binary_prediction, 3)
 ```
@@ -310,18 +362,29 @@ colMeans(binary_prediction)
 ###  Model evaluation
 
 
-```{r comment=""}
+```{r 18-classification_summaries, eval = FALSE}
 set.seed(84735)
 classification_summary(data = climbers, model = climb_model, cutoff = 0.5)
-```
-
-
-```{r comment=""}
 set.seed(84735)
 classification_summary(data = climbers, model = climb_model, cutoff = 0.65)
 ```
-
-
+```{r 18-classification_summaries_save, include = FALSE, eval = FALSE}
+# Run this if you change anything
+set.seed(84735)
+summary_0_5 <- classification_summary(
+  data = climbers, model = climb_model, cutoff = 0.5
+)
+set.seed(84735)
+summary_0_65 <- classification_summary(
+  data = climbers, model = climb_model, cutoff = 0.65
+)
+saveRDS(summary_0_5, "data/ch18/summary_0_5.rds")
+saveRDS(summary_0_65, "data/ch18/summary_0_65.rds")
+```
+```{r 18-classification_summaries_load, include = FALSE}
+readRDS("data/ch18/summary_0_5.rds")
+readRDS("data/ch18/summary_0_65.rds")
+```
 
 
 
@@ -378,12 +441,21 @@ airbnb_model_1 <- stan_glmer(
 )
 ```
 
-
-```{r message=FALSE, warning=FALSE, paged.print=FALSE}
+```{r 18-airbnb1_pp_check, eval = FALSE}
 pp_check(airbnb_model_1) + 
   xlim(0, 200) + 
   xlab("reviews")
 ```
+```{r 18-airbnb1_pp_check_save, include = FALSE, eval = FALSE}
+airbnb1_pp_check <- pp_check(airbnb_model_1) + 
+  xlim(0, 200) + 
+  xlab("reviews")
+saveRDS(airbnb1_pp_check, "data/ch18/airbnb1_pp_check.rds")
+```
+```{r 18-airbnb1_pp_check_load, include = FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+readRDS("data/ch18/airbnb1_pp_check.rds")
+```
+
 
 ```{r eval=FALSE}
 airbnb_model_2 <- stan_glmer(
@@ -397,30 +469,56 @@ airbnb_model_2 <- stan_glmer(
 )
 ```
 
-
-```{r message=FALSE, warning=FALSE, paged.print=FALSE}
+```{r 18-airbnb2_pp_check, eval = FALSE}
 pp_check(airbnb_model_2) + 
   xlim(0, 200) + 
   xlab("reviews")
 ```
+```{r 18-airbnb2_pp_check_save, include = FALSE, eval = FALSE}
+airbnb2_pp_check <- pp_check(airbnb_model_2) + 
+  xlim(0, 200) + 
+  xlab("reviews")
+saveRDS(airbnb2_pp_check, "data/ch18/airbnb2_pp_check.rds")
+```
+```{r 18-airbnb2_pp_check_load, include = FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+readRDS("data/ch18/airbnb2_pp_check.rds")
+```
 
 ### Posterior analysis
 
-```{r}
+```{r 18-airbnb2_tidy1, eval = FALSE}
 tidy(airbnb_model_2, effects = "fixed", conf.int = TRUE, conf.level = 0.80)
 ```
+```{r 18-airbnb2_tidy1_save, eval = FALSE, include = FALSE}
+airbnb2_tidy1 <- tidy(
+  airbnb_model_2, effects = "fixed", conf.int = TRUE, conf.level = 0.80
+)
+saveRDS(airbnb2_tidy1, "data/ch18/airbnb2_tidy1.rds")
+```
+```{r 18-airbnb2_tidy1_load, eval = FALSE}
+readRDS("data/ch18/airbnb2_tidy1.rds")
+```
 
-
-```{r}
+```{r 18-airbnb2_tidy2, eval = FALSE}
 tidy(airbnb_model_2, effects = "ran_vals", 
      conf.int = TRUE, conf.level = 0.80) %>% 
   select(level, estimate, conf.low, conf.high) %>% 
   filter(level %in% c("Albany_Park", "East_Garfield_Park", "The_Loop"))
 ```
+```{r 18-airbnb2_tidy2_save, eval = FALSE, include = FALSE}
+airbnb2_tidy2 <- tidy(airbnb_model_2, effects = "ran_vals", 
+     conf.int = TRUE, conf.level = 0.80) %>% 
+  select(level, estimate, conf.low, conf.high) %>% 
+  filter(level %in% c("Albany_Park", "East_Garfield_Park", "The_Loop"))
+saveRDS(airbnb2_tidy2, "data/ch18/airbnb2_tidy2.rds")
+```
+```{r 18-airbnb2_tidy2_load, eval = FALSE}
+readRDS("data/ch18/airbnb2_tidy2.rds")
+```
 
 
 **Posterior predictions of reviews**
-```{r message=FALSE, warning=FALSE, paged.print=FALSE}
+```{r 18-airbnb2_predict, eval = FALSE}
 set.seed(84735)
 predicted_reviews <- posterior_predict(
   airbnb_model_2, 
@@ -428,6 +526,15 @@ predicted_reviews <- posterior_predict(
     rating = rep(5, 3), 
     room_type = rep("Entire home/apt", 3), 
     neighborhood = c("Albany Park", "East Garfield Park", "The Loop")))
+```
+```{r 18-airbnb2_predict_save, eval = FALSE, include = FALSE}
+saveRDS(predicted_reviews, "data/ch18/predicted_reviews.rds")
+```
+```{r 18-airbnb2_predict_load, include = FALSE}
+predicted_reviews <- readRDS("data/ch18/predicted_reviews.rds")
+```
+
+```{r 18-airbnb2_predict_plot}
 mcmc_areas(predicted_reviews, prob = 0.8) +
   ggplot2::scale_y_discrete(
     labels = c("Albany Park", "East Garfield Park", "The Loop")) + 
@@ -435,30 +542,21 @@ mcmc_areas(predicted_reviews, prob = 0.8) +
   xlab("reviews")
 ```
 
-
 ### Model evaluation
 
-
-```{r eval=FALSE}
+```{r 18-airbnb2_summary, eval=FALSE}
 set.seed(84735)
 pred <- prediction_summary(model = airbnb_model_2, data = airbnb)
 ```
-
+```{r 18-airbnb2_summary_save, eval = FALSE, include = FALSE}
+saveRDS(pred, "data/ch18/airbnb2_summary.rds")
+```
+```{r 18-airbnb2_summary_load, include = FALSE}
+pred <- readRDS("data/ch18/airbnb2_summary.rds")
+```
 ```{r}
 pred
 ```
-
-
-```{r eval=FALSE}
-save.image(file="data/ch18.RData")
-```
-
-
-
-## Conclusions
-
-
-
 
 
 
